k8s-labs/cert-manager-vault-lab/k8s/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx 
spec:
  controller: k8s.io/internal-ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx2 
  # annotations:
  #   cert-manager.io/cluster-issuer: vault-issuer
  #   cert-manager.io/duration: 1h
  #   cert-manager.io/renew-before: 30m
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #     - nginx.webdomain.com
  #     secretName: nginx-webdomain-com-tls
  rules:
    - host: nginx2.domain.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
                service:
                  name: nginx 
                  port:
                    number: 8080
